<resources>
    <string name="app_name">Project_1_438</string>
    <string name="usename_create">Usename</string>
    <string name="first_name_create">First Name</string>
    <string name="username_hint_create">Username</string>
    <string name="password_hint_create">Password</string>
    <string name="first_name">First Name</string>
    <string name="zipcode_hint_create">Zipcode</string>
    <string name="create_btn">Create</string>
    <string name="log_into_your_account">LOG INTO YOUR ACCOUNT</string>
    <string name="log_in">Log in</string>
    <string name="admin">ADMIn</string>
    <string name="firstname">Firstname</string>
    <string name="username">Username</string>
    <string name="zipcode">Zipcode</string>
    <string name="password">Password</string>
    <string name="apply">Apply</string>
    <string name="delete">DELETE</string>
    <string name="weatha">Weatha</string>
    <string name="edit_account">Edit Account</string>
    <string name="create_account">Create Account</string>
</resources>