<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminEditActivity"
    android:id="@+id/edit_admin">

    <TextView
        android:id="@+id/edit_fname"
        android:layout_width="67dp"
        android:layout_height="22dp"
        android:layout_marginTop="80dp"
        android:text="@string/firstname"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextFirstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/edit_uname"
        android:layout_width="67dp"
        android:layout_height="22dp"
        android:layout_marginTop="84dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextFirstname"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintStart_toStartOf="@+id/edit_fname"
        app:layout_constraintTop_toBottomOf="@+id/edit_fname" />

    <EditText
        android:id="@+id/editTextTextUsername"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="@+id/edit_uname"
        app:layout_constraintTop_toBottomOf="@+id/edit_uname" />

    <TextView
        android:id="@+id/editZip"
        android:layout_width="67dp"
        android:layout_height="22dp"
        android:layout_marginTop="220dp"
        android:text="@string/zipcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextZipcode"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintStart_toStartOf="@+id/editZip"
        app:layout_constraintTop_toBottomOf="@+id/editZip" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="@+id/editpass"
        app:layout_constraintTop_toBottomOf="@+id/editpass" />

    <Button
        android:id="@+id/applyChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="376dp"
        android:text="@string/apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="56dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>